Fixed controller tests
Except user which still need work