@@ -9,7 +9,11 @@ import com.money.draft.service.AdminService;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.time.Instant;
+import java.time.LocalDateTime;
+import java.time.ZoneOffset;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class AdminServiceImpl implements AdminService {
@@ -30,9 +34,9 @@ public class AdminServiceImpl implements AdminService {
                         a.getId(),
                         a.getBalance(),
                         a.getStatus().name(),
-                        a.getLastUpdated()
+                        toLocalDateTime(a.getLastUpdated()) // works for Instant or LocalDateTime
                 ))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -47,8 +51,20 @@ public class AdminServiceImpl implements AdminService {
                         tx.getStatus().name(),
                         tx.getFailureReason(),
                         tx.getIdempotencyKey(),
-                        tx.getCreatedOn()
+                        toLocalDateTime(tx.getCreatedOn()) // typically Instant -> LocalDateTime (UTC)
                 ))
-                .toList();
+                .collect(Collectors.toList());
+    }
+
+    // --- Helpers ---
+
+    // Convert Instant -> LocalDateTime (UTC)
+    private static LocalDateTime toLocalDateTime(Instant instant) {
+        return instant == null ? null : instant.atOffset(ZoneOffset.UTC).toLocalDateTime();
+    }
+
+    // Pass-through when already LocalDateTime
+    private static LocalDateTime toLocalDateTime(LocalDateTime ldt) {
+        return ldt;
     }
 }
